--- a/kaggle/PGS5/PGS5_ep2/phase4.ipynb
+++ b/kaggle/PGS5/PGS5_ep2/phase4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3adff24a-610c-4458-b36d-4ee45559c55f",
    "metadata": {},
    "outputs": [
@@ -10,25 +10,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-06 22:33:08.161506: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-02-06 22:33:08.400354: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-02-06 22:33:09.133227: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2025-02-07 09:46:41.475871: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1738921601.487647    2918 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1738921601.491290    2918 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-02-07 09:46:41.503304: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.3 (main, May  1 2024, 17:33:23) [GCC 11.4.0]\n",
-      "pandas 2.2.2\n",
+      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
+      "pandas 2.2.3\n",
       "polars 1.12.0\n",
       "matplotlib 3.8.4\n",
       "seaborn 0.13.2\n",
       "numpy 1.26.4\n",
-      "scipy 1.13.0\n",
-      "sklearn 1.4.2\n",
-      "lightgbm 4.3.0\n",
+      "scipy 1.12.0\n",
+      "sklearn 1.5.2\n",
       "xgboost 2.1.2\n",
       "catboost 1.2.5\n"
      ]
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "407df7dd-8d9e-4b23-820a-3d9966bb34fd",
    "metadata": {},
    "outputs": [],
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "a9817a9b-7178-4135-9ced-551475a6b09d",
    "metadata": {},
    "outputs": [],
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "9b0e2726-150a-4367-b19e-3bed7eeba239",
    "metadata": {},
    "outputs": [],
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "78e1aa17-4ebf-4c7e-98ee-3dc1f66cd630",
    "metadata": {},
    "outputs": [
@@ -189,7 +190,7 @@
        "0.856175"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "50e8bbe7-dac8-4488-8fda-ecb32afa25f2",
    "metadata": {},
    "outputs": [
@@ -217,7 +218,7 @@
     }
    ],
    "source": [
-    "for train_idx, valid_idx in kf.split(df_train[X], df_train[target]):\n",
+    "for train_idx, valid_idx in kf.split(df_train, df_train[target]):\n",
     "    df_cv_train, df_valid = df_train.iloc[train_idx], df_train.iloc[valid_idx]\n",
     "    print(\n",
     "        df_valid['Weight Capacity (kg)'].isin(df_cv_train['Weight Capacity (kg)'].unique()).mean()\n",
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "2996f2d4-b5b2-4879-8979-81561da03704",
    "metadata": {},
    "outputs": [
@@ -244,7 +245,7 @@
    ],
    "source": [
     "tgt = TargetEncoder(smooth = 40, random_state = 123)\n",
-    "for train_idx, valid_idx in kf.split(df_train[X], df_train[target]):\n",
+    "for train_idx, valid_idx in kf.split(df_train, df_train[target]):\n",
     "    df_cv_train, df_valid = df_train.iloc[train_idx], df_train.iloc[valid_idx]\n",
     "    bidx = df_valid['Weight Capacity (kg)'].isin(df_cv_train['Weight Capacity (kg)'].unique()) & df_valid['Weight Capacity (kg)'].notna() &\\\n",
     "            df_valid['Weight Capacity (kg)'].between(5, 30, inclusive = 'neither')\n",
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "id": "30e4417b-5587-4ce0-8d36-a98a64a7de66",
    "metadata": {},
    "outputs": [
@@ -267,7 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.6304360034108 39.29107590447395 39.22225670779372 39.316704 0.8217593983456508\n"
+      "38.6304360034108 39.29107590447395 39.22264989813489 39.316704 0.8217593983456508\n"
      ]
     }
    ],
@@ -278,7 +279,7 @@
     "    #'validation_fraction': 0.1\n",
     "}\n",
     "tgt = TargetEncoder(smooth = 40, random_state = 123)\n",
-    "for train_idx, valid_idx in ss.split(df_train[X], df_train[target]):\n",
+    "for train_idx, valid_idx in ss.split(df_train, df_train[target]):\n",
     "    df_cv_train, df_valid = df_train.iloc[train_idx], df_train.iloc[valid_idx]\n",
     "    bidx = df_valid['Weight Capacity (kg)'].isin(df_cv_train['Weight Capacity (kg)'].unique()) & df_valid['Weight Capacity (kg)'].notna() &\\\n",
     "            df_valid['Weight Capacity (kg)'].between(5, 30, inclusive = 'neither')\n",
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "id": "7b97e737-e8ab-4860-9c11-d8a84f9e9b9e",
    "metadata": {},
    "outputs": [
@@ -307,12 +308,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.516265760313914 38.592548190682805 39.222649898163745 39.316704 0.8217593983456508\n"
+      "38.70587429517391 38.59287181782381 39.22264989813489 39.316704 0.8217593983456508\n"
      ]
     }
    ],
    "source": [
-    "for train_idx, valid_idx in ss.split(df_train[X], df_train[target]):\n",
+    "for train_idx, valid_idx in ss.split(df_train, df_train[target]):\n",
     "    df_cv_train, df_valid = df_train.iloc[train_idx], df_train.iloc[valid_idx]\n",
     "    bidx = df_valid['Weight Capacity (kg)'].isin(df_cv_train['Weight Capacity (kg)'].unique()) & df_valid['Weight Capacity (kg)'].notna() &\\\n",
     "            df_valid['Weight Capacity (kg)'].between(5, 30, inclusive = 'neither')\n",
@@ -336,7 +337,7 @@
     "\n",
     "    s_merge = pd.concat([\n",
     "        pd.Series(\n",
-    "            tgt.transform(df_valid1[['wc_i2']])[:, 0], index = df_valid1.index\n",
+    "            make_pipeline(reg_cb2[0]['preprocessor'], reg_cb2[0]['model']).predict(df_valid1[reg_cb2[1]]), index = df_valid1.index\n",
     "        ),\n",
     "        pd.Series(\n",
     "            make_pipeline(reg_cb[0]['preprocessor'], reg_cb[0]['model']).predict(df_valid2[reg_cb[1]]), index = df_valid2.index\n",
@@ -351,6 +352,29 @@
     "            df_valid2[target], make_pipeline(reg_cb[0]['preprocessor'], reg_cb[0]['model']).predict(df_valid2[reg_cb[1]])\n",
     "        ), df_valid2[target].std(), bidx.mean()\n",
     "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b83df08f-10e9-44e3-8880-b938927d8a69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38.21544175895192"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_mean_squared_error(\n",
+    "    df_cv_train[target], make_pipeline(reg_cb2[0]['preprocessor'], reg_cb2[0]['model']).predict(df_cv_train[reg_cb2[1]])\n",
+    ")"
    ]
   },
   {
@@ -857,6 +881,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45c7a384-54be-452f-bb25-5105790ca475",
+   "metadata": {},
+   "source": [
+    "# Submission 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "id": "9cb6dd77-1361-454f-b24c-934d8372beeb",
@@ -892,6 +924,14 @@
    "source": [
     "# LB: 38.955\n",
     "#!kaggle competitions submit -c playground-series-s5e2 -f result/submission2.csv -m \"2\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff265c83-63a0-4a32-96e4-39070f6a9aed",
+   "metadata": {},
+   "source": [
+    "# Submission 3"
    ]
   },
   {
@@ -934,6 +974,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b11199d-8653-4d14-8f23-1ad6ae7bb701",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -952,7 +1000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
