--- a/kaggle/PGS5/PGS5_ep2/phase4.ipynb
+++ b/kaggle/PGS5/PGS5_ep2/phase4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3adff24a-610c-4458-b36d-4ee45559c55f",
    "metadata": {},
    "outputs": [
@@ -10,26 +10,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-07 09:46:41.475871: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1738921601.487647    2918 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1738921601.491290    2918 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-07 09:46:41.503304: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2025-02-07 23:44:46.541105: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-02-07 23:44:46.790545: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-02-07 23:44:47.571976: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
-      "pandas 2.2.3\n",
+      "3.12.3 (main, May  1 2024, 17:33:23) [GCC 11.4.0]\n",
+      "pandas 2.2.2\n",
       "polars 1.12.0\n",
       "matplotlib 3.8.4\n",
       "seaborn 0.13.2\n",
       "numpy 1.26.4\n",
-      "scipy 1.12.0\n",
-      "sklearn 1.5.2\n",
+      "scipy 1.13.0\n",
+      "sklearn 1.4.2\n",
+      "lightgbm 4.3.0\n",
       "xgboost 2.1.2\n",
       "catboost 1.2.5\n"
      ]
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "407df7dd-8d9e-4b23-820a-3d9966bb34fd",
    "metadata": {},
    "outputs": [],
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a9817a9b-7178-4135-9ced-551475a6b09d",
    "metadata": {},
    "outputs": [],
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9b0e2726-150a-4367-b19e-3bed7eeba239",
    "metadata": {},
    "outputs": [],
@@ -149,10 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8211e483-4980-4274-9f6a-3e3f1fd968e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38.83834182589179"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def rmse_arr_freq_nearest():\n",
     "    X = ['Weight Capacity (kg)']\n",
@@ -180,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "78e1aa17-4ebf-4c7e-98ee-3dc1f66cd630",
    "metadata": {},
    "outputs": [
@@ -190,7 +200,7 @@
        "0.856175"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "50e8bbe7-dac8-4488-8fda-ecb32afa25f2",
    "metadata": {},
    "outputs": [
@@ -227,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "2996f2d4-b5b2-4879-8979-81561da03704",
    "metadata": {},
    "outputs": [
@@ -260,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "30e4417b-5587-4ce0-8d36-a98a64a7de66",
    "metadata": {},
    "outputs": [
@@ -268,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.6304360034108 39.29107590447395 39.22264989813489 39.316704 0.8217593983456508\n"
+      "38.6304360034108 39.29107590447395 39.22225670779372 39.316704 0.8217593983456508\n"
      ]
     }
    ],
@@ -300,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "7b97e737-e8ab-4860-9c11-d8a84f9e9b9e",
    "metadata": {},
    "outputs": [
@@ -308,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.70587429517391 38.59287181782381 39.22264989813489 39.316704 0.8217593983456508\n"
+      "38.70553810978552 38.592548190682805 39.22225670779372 39.316704 0.8217593983456508\n"
      ]
     }
    ],
@@ -355,31 +365,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "b83df08f-10e9-44e3-8880-b938927d8a69",
+   "cell_type": "markdown",
+   "id": "28c47d0c-29a1-4e21-a06a-fc649a76ce9f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "38.21544175895192"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "root_mean_squared_error(\n",
-    "    df_cv_train[target], make_pipeline(reg_cb2[0]['preprocessor'], reg_cb2[0]['model']).predict(df_cv_train[reg_cb2[1]])\n",
-    ")"
+    "# Submission 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "id": "90672682-60ae-48a2-be4a-5408f7031aa4",
    "metadata": {},
    "outputs": [],
@@ -404,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "f4157129-fcc0-4949-a635-8f3488eef631",
    "metadata": {},
    "outputs": [],
@@ -420,14 +415,6 @@
     "        make_pipeline(reg_cb[0]['preprocessor'], reg_cb[0]['model']).predict(df_test2[reg_cb[1]]), index = df_test2.index\n",
     "    )\n",
     "], axis = 0).rename(target).sort_index().to_frame().to_csv(os.path.join('result', 'submission1.csv'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "28c47d0c-29a1-4e21-a06a-fc649a76ce9f",
-   "metadata": {},
-   "source": [
-    "# Submission 1"
    ]
   },
   {
@@ -1000,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
