--- a/kaggle/PGS5/PGS5_ep2/phase6.ipynb
+++ b/kaggle/PGS5/PGS5_ep2/phase6.ipynb
@@ -9,7 +9,15 @@
     "\n",
     "Weight Capacity (kg)는 Price를 예측할 수 있는 Key feature 이다. Weight Capacity (kg)는 범주형 성격을 보이는데, \n",
     "\n",
-    "이는 "
+    "이 배경에는 동일한 Weight Capacity (kg)에는 동일한 노이즈가 부여되었음이 짐작이 된다. \n",
+    "\n",
+    "이 점은 phase1~5 까지의 여러 실험을 통해 이로 인해 나타나는 결과를 통해 유력함을 확인했습니다. \n",
+    "\n",
+    "단계에서는 이 점을 이용한 Weight Capacity (kg)를  train에 등장하는 Weight Capacity (kg)와 5, 30을 제외한 변수는\n",
+    "\n",
+    "Weight Capacity (kg)로 Mean encoding을 입력으로 하는 모델을 이용하고, \n",
+    "\n",
+    "그렇지 않으면 Mean Encoding을 하지 않은 모델을 사용합니다."
    ]
   },
   {
@@ -22,26 +30,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-10 01:23:06.474672: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1739150586.606831    5272 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1739150586.642442    5272 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-10 01:23:06.955969: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2025-02-10 23:35:06.664344: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-02-10 23:35:06.908394: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-02-10 23:35:07.676875: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
-      "pandas 2.2.3\n",
+      "3.12.3 (main, May  1 2024, 17:33:23) [GCC 11.4.0]\n",
+      "pandas 2.2.2\n",
       "polars 1.12.0\n",
       "matplotlib 3.8.4\n",
       "seaborn 0.13.2\n",
       "numpy 1.26.4\n",
-      "scipy 1.12.0\n",
-      "sklearn 1.5.2\n",
+      "scipy 1.13.0\n",
+      "sklearn 1.4.2\n",
+      "lightgbm 4.3.0\n",
       "xgboost 2.1.2\n",
       "catboost 1.2.5\n"
      ]
@@ -136,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f7ba906c-801c-423d-9858-ecffd7b8d37b",
    "metadata": {},
    "outputs": [],
@@ -161,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "a99b5ddf-711e-4eea-aff7-9992924b1f86",
    "metadata": {},
    "outputs": [],
@@ -176,160 +183,84 @@
     "            bidx = ~bidx\n",
     "        df_valid = df_valid.loc[bidx]\n",
     "        reg = sgml.train(df_cv_train, hparams, config, adapter, **args)\n",
+    "        prd = make_pipeline(reg[0]['preprocessor'], reg[0]['model']).predict(df_valid[reg[1]])\n",
     "        results.append(\n",
-    "            (reg, root_mean_squared_error(df_valid[target], make_pipeline(reg[0]['preprocessor'], reg[0]['model']).predict(df_valid[reg[1]])))\n",
+    "            (reg, root_mean_squared_error(df_valid[target], prd), pd.Series(prd, index = df_valid.index, name = Target))\n",
     "        )\n",
     "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "e4e6ce1d-17a7-4c56-8e1d-b14efdd5017e",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Round:   0%|          | 0/1500 [00:00<?, ?it/s]"
+       "(metric  set  \n",
+       " RMSE    learn    699\n",
+       " dtype: int64,\n",
+       " 38.637942532234035)"
       ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = eval_model({\n",
-    "    'model_params' : {'n_estimators': 1500, 'learning_rate': 0.1},\n",
-    "    'X_num': X_num, 'X_cat': X_cat,\n",
-    "    'validation_fraction': 0.1\n",
-    "}, cb_adapter, case = 1)"
+    "results = sc.cache_result(\n",
+    "    'cv_cb1_0',\n",
+    "    lambda : eval_model({\n",
+    "        'model_params' : {'n_estimators': 700, 'max_depth': 7, 'learning_rate': 0.1},\n",
+    "        'X_num': X_num, 'X_cat': X_cat, 'X_tgt': ['wc_i2'], 'tgt': {'cv': 24, 'smooth': 20, 'target_type': 'continuous', 'random_state': 123},\n",
+    "        #'validation_fraction': 0.1\n",
+    "    }, cb_adapter, case = 0, sp = kf, task_type = 'GPU')\n",
+    ")\n",
+    "sgml.cb_learning_result(results[0][0][0])['valid_result'].idxmin(), results[0][1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "ce784429-8609-49bc-b2b8-48f923d7bef1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(metric  set         \n",
-       " RMSE    learn           1499\n",
-       "         validation_0    1499\n",
-       "         validation_1    1493\n",
+       "(metric  set  \n",
+       " RMSE    learn    999\n",
        " dtype: int64,\n",
-       " 38.79740725539745)"
+       " 39.22134932845147)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "results = sc.cache_result(\n",
+    "    'cv_cb1_1',\n",
+    "    lambda :eval_model({\n",
+    "        'model_params' : {'n_estimators': 1000, 'max_depth': 7, 'learning_rate': 0.1},\n",
+    "        'X_num': X_num, 'X_cat': X_cat,\n",
+    "    #    'validation_fraction': 0.1\n",
+    "    }, cb_adapter, case = 1, sp = kf, task_type = 'GPU')\n",
+    ")\n",
     "sgml.cb_learning_result(results[0][0][0])['valid_result'].idxmin(), results[0][1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "8d141719-8a83-4c1a-b5d6-fe03065b6f40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = eval_model({\n",
-    "    'model_params' : {'n_estimators': 500, 'learning_rate': 0.1},\n",
-    "    'X_num': X_num, 'X_cat': X_cat,\n",
-    "    'validation_fraction': 0.1\n",
-    "}, cb_adapter, task_type = 'GPU')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "7258ffb2-c28f-4838-90c9-3646e93b2f64",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({'variables': array(['cat__Brand', 'cat__Material', 'cat__Size',\n",
-       "         'cat__Laptop Compartment', 'cat__Waterproof', 'cat__Style',\n",
-       "         'cat__Color', 'cat__Compartments_c', 'pt__Weight Capacity (kg)'],\n",
-       "        dtype=object),\n",
-       "  'valid_shape': (319546, 9),\n",
-       "  'train_shape': (2875908, 9),\n",
-       "  'target': 'Price',\n",
-       "  'model': <catboost.core.CatBoostRegressor at 0x7feb015edeb0>,\n",
-       "  'preprocessor': ColumnTransformer(transformers=[('cat', 'passthrough',\n",
-       "                                   ['Brand', 'Material', 'Size',\n",
-       "                                    'Laptop Compartment', 'Waterproof', 'Style',\n",
-       "                                    'Color', 'Compartments_c']),\n",
-       "                                  ('pt', 'passthrough',\n",
-       "                                   ['Weight Capacity (kg)'])])},\n",
-       " ['Brand',\n",
-       "  'Laptop Compartment',\n",
-       "  'Compartments_c',\n",
-       "  'Style',\n",
-       "  'Waterproof',\n",
-       "  'Color',\n",
-       "  'Weight Capacity (kg)',\n",
-       "  'Size',\n",
-       "  'Material'])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "9fe2e036-0c08-41ca-84dd-65895a35cd18",
+   "id": "66c6a4e2-6de8-4a56-8431-dec483c266a7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def eval_model(hparams, adapter, case = 0, **args):\n",
-    "    results = list()\n",
-    "    for train_idx, valid_idx in kf.split(df_train, df_train[target]):\n",
-    "        df_cv_train, df_valid = df_train.iloc[train_idx], df_train.iloc[valid_idx]\n",
-    "        bidx = df_valid['Weight Capacity (kg)'].isin(df_cv_train['Weight Capacity (kg)'].unique()) & df_valid['Weight Capacity (kg)'].notna() &\\\n",
-    "                df_valid['Weight Capacity (kg)'].between(5, 30, inclusive = 'neither')\n",
-    "        df_valid, df_valid2 = df_valid.loc[bidx], df_valid.loc[~bidx]\n",
-    "        reg1 = sgml.train(\n",
-    "            df_cv_train, {\n",
-    "            'model_params' : {'n_estimators': 500, 'learning_rate': 0.1},\n",
-    "            'X_num': X_num, 'X_cat': X_cat,\n",
-    "            #'validation_fraction': 0.1\n",
-    "        }, config, cb_adapter, task_type = 'GPU')\n",
-    "        reg2 = sgml.train(\n",
-    "            df_cv_train, {\n",
-    "            'model_params' : {'n_estimators': 500, 'learning_rate': 0.1},\n",
-    "            'X_cat': X_cat, 'X_num': X_num + ['tgt'],\n",
-    "            # 'validation_fraction': 0.1\n",
-    "        }, config, cb_adapter, task_type = 'GPU')\n",
-    "        \n",
-    "        s_merge = pd.concat([\n",
-    "            pd.Series(\n",
-    "                make_pipeline(reg_cb2[0]['preprocessor'], reg_cb2[0]['model']).predict(df_valid1[reg_cb2[1]]), index = df_valid1.index\n",
-    "            ),\n",
-    "            pd.Series(\n",
-    "                make_pipeline(reg_cb[0]['preprocessor'], reg_cb[0]['model']).predict(df_valid2[reg_cb[1]]), index = df_valid2.index\n",
-    "            )\n",
-    "        ], axis = 0)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -348,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
