--- a/kaggle/CIBMTR/phase1.ipynb
+++ b/kaggle/CIBMTR/phase1.ipynb
@@ -2085,7 +2085,7 @@
    "source": [
     "def score(df, prds):\n",
     "    return df.groupby('race_group', observed=True).apply(\n",
-    "        lambda x: concordance_index(x['efs_time'], prds.loc[x.index], x['efs']), include_groups=False\n",
+    "        lambda x: concordance_index(x['efs_time'], -prds.loc[x.index], x['efs']), include_groups=False\n",
     "    ).pipe(\n",
     "        lambda x: float(x.mean() - x.std(ddof=0))\n",
     "    )"
@@ -2102,7 +2102,7 @@
     "    return lambda x: train_test_split(x, test_size = validation_fraction)\n",
     "\n",
     "config = {\n",
-    "    'predict_func': lambda m, df, X: pd.Series(-m.predict(df[X]), index = df.index),\n",
+    "    'predict_func': lambda m, df, X: pd.Series(m.predict(df[X]), index = df.index),\n",
     "    'score_func': lambda df, prds: score,\n",
     "    'validation_splitter': get_validation_splitter,\n",
     "    'progress_callback': sgml.ProgressCallBack(), \n",
@@ -2179,7 +2179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2193,7 +2193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
