--- a/kaggle/CIBMTR/submission_test.ipynb
+++ b/kaggle/CIBMTR/submission_test.ipynb
@@ -2,20 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2d6165a0-a173-4084-8c04-1fdb7f284234",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting lifelines\n",
+      "  Downloading lifelines-0.30.0-py3-none-any.whl.metadata (3.2 kB)\n",
+      "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.10/dist-packages (from lifelines) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.7.0 in /usr/local/lib/python3.10/dist-packages (from lifelines) (1.13.1)\n",
+      "Requirement already satisfied: pandas>=2.1 in /usr/local/lib/python3.10/dist-packages (from lifelines) (2.2.3)\n",
+      "Requirement already satisfied: matplotlib>=3.0 in /usr/local/lib/python3.10/dist-packages (from lifelines) (3.7.5)\n",
+      "Requirement already satisfied: autograd>=1.5 in /usr/local/lib/python3.10/dist-packages (from lifelines) (1.7.0)\n",
+      "Collecting autograd-gamma>=0.3 (from lifelines)\n",
+      "  Downloading autograd-gamma-0.5.0.tar.gz (4.0 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+      "Collecting formulaic>=0.2.2 (from lifelines)\n",
+      "  Downloading formulaic-1.1.1-py3-none-any.whl.metadata (6.9 kB)\n",
+      "Collecting interface-meta>=1.2.0 (from formulaic>=0.2.2->lifelines)\n",
+      "  Downloading interface_meta-1.3.0-py3-none-any.whl.metadata (6.7 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in /usr/local/lib/python3.10/dist-packages (from formulaic>=0.2.2->lifelines) (4.12.2)\n",
+      "Requirement already satisfied: wrapt>=1.0 in /usr/local/lib/python3.10/dist-packages (from formulaic>=0.2.2->lifelines) (1.17.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (4.55.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (1.4.7)\n",
+      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (24.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (11.0.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (2.9.0.post0)\n",
+      "Requirement already satisfied: mkl_fft in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (1.3.8)\n",
+      "Requirement already satisfied: mkl_random in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (1.2.4)\n",
+      "Requirement already satisfied: mkl_umath in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (0.1.1)\n",
+      "Requirement already satisfied: mkl in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (2025.0.1)\n",
+      "Requirement already satisfied: tbb4py in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (2022.0.0)\n",
+      "Requirement already satisfied: mkl-service in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (2.4.1)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=2.1->lifelines) (2025.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas>=2.1->lifelines) (2025.1)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib>=3.0->lifelines) (1.17.0)\n",
+      "Requirement already satisfied: intel-openmp>=2024 in /usr/local/lib/python3.10/dist-packages (from mkl->numpy>=1.14.0->lifelines) (2024.2.0)\n",
+      "Requirement already satisfied: tbb==2022.* in /usr/local/lib/python3.10/dist-packages (from mkl->numpy>=1.14.0->lifelines) (2022.0.0)\n",
+      "Requirement already satisfied: tcmlib==1.* in /usr/local/lib/python3.10/dist-packages (from tbb==2022.*->mkl->numpy>=1.14.0->lifelines) (1.2.0)\n",
+      "Requirement already satisfied: intel-cmplr-lib-rt in /usr/local/lib/python3.10/dist-packages (from mkl_umath->numpy>=1.14.0->lifelines) (2024.2.0)\n",
+      "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.10/dist-packages (from intel-openmp>=2024->mkl->numpy>=1.14.0->lifelines) (2024.2.0)\n",
+      "Downloading lifelines-0.30.0-py3-none-any.whl (349 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m349.3/349.3 kB\u001b[0m \u001b[31m7.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading formulaic-1.1.1-py3-none-any.whl (115 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.7/115.7 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading interface_meta-1.3.0-py3-none-any.whl (14 kB)\n",
+      "Building wheels for collected packages: autograd-gamma\n",
+      "  Building wheel for autograd-gamma (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+      "  Created wheel for autograd-gamma: filename=autograd_gamma-0.5.0-py3-none-any.whl size=4031 sha256=4993432149f1a39cca261570ce29e1bbc7f475419acccd2ede06476ff3b412d1\n",
+      "  Stored in directory: /root/.cache/pip/wheels/25/cc/e0/ef2969164144c899fedb22b338f6703e2b9cf46eeebf254991\n",
+      "Successfully built autograd-gamma\n",
+      "Installing collected packages: interface-meta, formulaic, autograd-gamma, lifelines\n",
+      "Successfully installed autograd-gamma-0.5.0 formulaic-1.1.1 interface-meta-1.3.0 lifelines-0.30.0\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install lifelines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "268cd449-1ad7-4640-bf07-acf78dda70b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.10.12 (main, Nov  6 2024, 20:22:13) [GCC 11.4.0]\n",
+      "numpy 1.26.4\n",
+      "pandas 2.2.3\n",
+      "polars 1.9.0\n",
+      "matplotlib 3.7.5\n",
+      "seaborn 0.12.2\n",
+      "lifelines 0.30.0\n",
+      "sklearn 1.2.2\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import joblib\n",
@@ -46,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b114ceff-d568-4b68-a7c9-d9a0a29c922a",
    "metadata": {},
    "outputs": [],
@@ -59,10 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d8aff743-ca33-426b-aca5-64c0622b3763",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model/p1_test.joblib']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_4 = [\n",
     "    'psych_disturb', 'diabetes', 'arrhythmia', 'renal_issue', 'pulm_severe', 'obesity', 'hepatic_severe', \n",
@@ -91,7 +174,7 @@
     "]\n",
     "X_nom_nna = ['prim_disease_hct', 'race_group', 'tbi_status']\n",
     "p1_test = make_pipeline(\n",
-    "    sgpp.PolarsProcessor(),\n",
+    "    sgpp.PolarsProcessor({'ID': pl.Int64}),\n",
     "    sgpp.PandasCoverter(index_col = 'ID'),\n",
     "    custpp.CIBMTTransformer(X_2, X_4, X_na, X_nom_na + X_nom_nna),\n",
     "    sgpp.ApplyWrapper(SimpleImputer(strategy='most_frequent').set_output(transform='pandas'), X_int_fm, postfix = '_fm'),\n",
@@ -100,12 +183,41 @@
     "    sgpp.ApplyWrapper(sgpp.CatOOVFilter(), X_nom_nna),\n",
     ")\n",
     "df_train = p1_test.fit_transform(['data/train.csv'])\n",
-    "#joblib.dump(p1, os.path.join('model', 'p1_test.joblib'))"
+    "joblib.dump(p1_test, os.path.join('model', 'p1_test.joblib'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "14166d6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'p1_test = joblib.load(os.path.join(\\'model\\', \\'p1_test.joblib\\'))\\ndf_train_2 = pd.read_csv(\\'data/train_2.csv\\', index_col = \\'ID\\', dtype = {\\n    **{i: \\'category\\' for i, _ in X_2},\\n    **{i: \\'category\\' for i in X_4},\\n    **{i: \\'category\\' for i in X_nom_na},\\n    **{i: \\'category\\' for i in X_nom_nna}}\\n)\"\\ndf_train_2 = p1_test.transform([\\'data/train_2.csv\\'])\\ndf_train_2.head()'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"p1_test = joblib.load(os.path.join('model', 'p1_test.joblib'))\n",
+    "df_train_2 = pd.read_csv('data/train_2.csv', index_col = 'ID', dtype = {\n",
+    "    **{i: 'category' for i, _ in X_2},\n",
+    "    **{i: 'category' for i in X_4},\n",
+    "    **{i: 'category' for i in X_nom_na},\n",
+    "    **{i: 'category' for i in X_nom_nna}}\n",
+    ")\"\n",
+    "df_train_2 = p1_test.transform(['data/train_2.csv'])\n",
+    "df_train_2.head()\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "1b6cad47-c24f-4f58-b1ca-36ac9c112d0c",
    "metadata": {},
    "outputs": [],
@@ -138,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c574a974-560c-49a7-890c-4a766ed9761d",
    "metadata": {},
    "outputs": [],
@@ -154,14 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8b08d630-aa8f-423d-9289-0de935d6a079",
    "metadata": {},
    "outputs": [],
    "source": [
     "def score(df, prds):\n",
     "    return df.groupby('race_group', observed=True).apply(\n",
-    "        lambda x: concordance_index(x['efs_time'], prds.loc[x.index], x['efs']), include_groups=False\n",
+    "        lambda x: concordance_index(x['efs_time'], -prds.loc[x.index], x['efs']), include_groups=False\n",
     "    ).pipe(\n",
     "        lambda x: float(x.mean() - x.std(ddof=0))\n",
     "    )"
@@ -169,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "92ce7d7b-a74e-4e1f-89f9-b48708d8518d",
    "metadata": {},
    "outputs": [],
@@ -178,7 +290,7 @@
     "    return lambda x: train_test_split(x, test_size = validation_fraction)\n",
     "\n",
     "config = {\n",
-    "    'predict_func': lambda m, df, X: pd.Series(-m.predict(df[X]), index = df.index),\n",
+    "    'predict_func': lambda m, df, X: pd.Series(m.predict(df[X]), index = df.index),\n",
     "    'score_func': lambda df, prds: score,\n",
     "    'validation_splitter': get_validation_splitter,\n",
     "    'progress_callback': sgml.ProgressCallBack(), \n",
@@ -191,10 +303,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "66546204-b611-4a1e-a818-2b1c9450e49d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Round:   0%|          | 0/300 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "hparams = {\n",
     "    'model_params': {'num_leaves':  64, 'n_estimators':  300},\n",
@@ -205,33 +332,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2c567d70-3dfe-4618-974a-bb7048f29609",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8373568213852252"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "score(\n",
     "    df_train,\n",
     "    pd.Series(\n",
-    "        -make_pipeline(result[0]['preprocessor'], result[0]['model']).predict(df_train[result[1]]), index = df_train.index\n",
+    "        make_pipeline(result[0]['preprocessor'], result[0]['model']).predict(df_train[result[1]]), index = df_train.index\n",
     "    )\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "89ec0dfa-b24c-46d6-8db9-9a5dbee9f3a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model/lgb_test.joblib']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "joblib.dump(result, os.path.join('model', 'lgb_test.joblib'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c97d43ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -245,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
