--- a/kaggle/PGS5/PGS5_ep1/2nd phrase.ipynb
+++ b/kaggle/PGS5/PGS5_ep1/2nd phrase.ipynb
@@ -1176,7 +1176,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1190,7 +1190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
